Added class diagram creation (asbuilt) and renamed build to planned

--- a/C4-CSharp/AppSettings.json
+++ b/C4-CSharp/AppSettings.json
@@ -4,5 +4,6 @@
   "general": {
     "ProjectFolder": "%HOMEPATH%\\C4Projects",
     "DocumentationFolder": "%HOMEPATH%\\C4Documentation"
-  }
+  },
+  "AsBuiltCommand:PlantUmlCommand": "\"C:\\Program Files\\Java\\jdk-11.0.3\\bin\\javaw.exe\" -Dfile.encoding=UTF-8 -jar \"C:\\ProgramData\\chocolatey\\lib\\plantuml\\tools\\plantuml.jar\""
 }
